tests/expectations/compiler/option/input_output_fail.out
Error [ETYC0372164]: The input `x` has type `u8?`, which is or contains an optional type and is not allowed as an input to a `transition`, `async transition`, or `function`.
    --> compiler-test:5:12
     |
   5 |     fn foo(x: u8?, y: [u8?; 3], f: Foo) -> (u8?, u8?, Foo) {
     |            ^^^^^^
     |
     = Inputs to `transition`, `async transition`, and `function` definitions cannot be optional or contain optionals. Consider moving the optionality outside the call site.
Error [ETYC0372164]: The input `y` has type `[u8?; 3]`, which is or contains an optional type and is not allowed as an input to a `transition`, `async transition`, or `function`.
    --> compiler-test:5:20
     |
   5 |     fn foo(x: u8?, y: [u8?; 3], f: Foo) -> (u8?, u8?, Foo) {
     |                    ^^^^^^^^^^^
     |
     = Inputs to `transition`, `async transition`, and `function` definitions cannot be optional or contain optionals. Consider moving the optionality outside the call site.
Error [ETYC0372164]: The input `f` has type `Foo`, which is or contains an optional type and is not allowed as an input to a `transition`, `async transition`, or `function`.
    --> compiler-test:5:33
     |
   5 |     fn foo(x: u8?, y: [u8?; 3], f: Foo) -> (u8?, u8?, Foo) {
     |                                 ^^^^^^
     |
     = Inputs to `transition`, `async transition`, and `function` definitions cannot be optional or contain optionals. Consider moving the optionality outside the call site.
Error [ETYC0372165]: This function has an output of type `u8?`, which is or contains an optional type and is not allowed as an output of a `transition`, `async transition`, or `function`.
    --> compiler-test:5:45
     |
   5 |     fn foo(x: u8?, y: [u8?; 3], f: Foo) -> (u8?, u8?, Foo) {
     |                                             ^^^
     |
     = Outputs of `transition`, `async transition`, and `function` definitions cannot be optional or contain optionals. Consider moving the optionality outside the function call.
Error [ETYC0372165]: This function has an output of type `u8?`, which is or contains an optional type and is not allowed as an output of a `transition`, `async transition`, or `function`.
    --> compiler-test:5:50
     |
   5 |     fn foo(x: u8?, y: [u8?; 3], f: Foo) -> (u8?, u8?, Foo) {
     |                                                  ^^^
     |
     = Outputs of `transition`, `async transition`, and `function` definitions cannot be optional or contain optionals. Consider moving the optionality outside the function call.
Error [ETYC0372165]: This function has an output of type `Foo`, which is or contains an optional type and is not allowed as an output of a `transition`, `async transition`, or `function`.
    --> compiler-test:5:55
     |
   5 |     fn foo(x: u8?, y: [u8?; 3], f: Foo) -> (u8?, u8?, Foo) {
     |                                                       ^^^
     |
     = Outputs of `transition`, `async transition`, and `function` definitions cannot be optional or contain optionals. Consider moving the optionality outside the function call.
Error [ETYC0372164]: The input `x` has type `u8?`, which is or contains an optional type and is not allowed as an input to a `transition`, `async transition`, or `function`.
    --> compiler-test:9:18
     |
   9 |     async fn bar(x: u8?, f: Foo) {
     |                  ^^^^^^
     |
     = Inputs to `transition`, `async transition`, and `function` definitions cannot be optional or contain optionals. Consider moving the optionality outside the call site.
Error [ETYC0372164]: The input `f` has type `Foo`, which is or contains an optional type and is not allowed as an input to a `transition`, `async transition`, or `function`.
    --> compiler-test:9:26
     |
   9 |     async fn bar(x: u8?, f: Foo) {
     |                          ^^^^^^
     |
     = Inputs to `transition`, `async transition`, and `function` definitions cannot be optional or contain optionals. Consider moving the optionality outside the call site.
Error [ETYC0372164]: The input `x` has type `u8?`, which is or contains an optional type and is not allowed as an input to a `transition`, `async transition`, or `function`.
    --> compiler-test:15:8
     |
  15 | fn baz(x: u8?) -> u8? {
     |        ^^^^^^
     |
     = Inputs to `transition`, `async transition`, and `function` definitions cannot be optional or contain optionals. Consider moving the optionality outside the call site.
Error [ETYC0372165]: This function has an output of type `u8?`, which is or contains an optional type and is not allowed as an output of a `transition`, `async transition`, or `function`.
    --> compiler-test:15:19
     |
  15 | fn baz(x: u8?) -> u8? {
     |                   ^^^
     |
     = Outputs of `transition`, `async transition`, and `function` definitions cannot be optional or contain optionals. Consider moving the optionality outside the function call.
